Fix/jumping mark up (#211)
* Add more space for code; Get rid of elements jumping;

* Fix components jumps;

--- a/public/common/stylesheets/occurrence-indicator.styl
+++ b/public/common/stylesheets/occurrence-indicator.styl
@@ -11,7 +11,7 @@ pattern-box-size = 25px
 .qd-occurrence-indicator
 	display flex
 	flex 1
-	padding 5px
+	padding 0 5px
 
 	.qd-pattern
 		padding 1px
