--- a/public/game-master/styles/game-master.styl
+++ b/public/game-master/styles/game-master.styl
@@ -18,7 +18,7 @@ user-list-column-max-width = 400px
 	padding 0 main-left-offset 0 main-right-offset
 
 	.puzzles-progress
-		margin-bottom 0.8em
+		margin-bottom 1.3em
 
 	.game-master-screen-columns
 		display flex
@@ -39,8 +39,8 @@ user-list-column-max-width = 400px
 			.levels-info-num
 				color secondary-text-color
 				text-shadow light-shadow
-				font-size 1.2em
-				margin 0
+				font-size 1.5em
+				margin 0 .3em 0 0
 
 			.levels-info-name
 				color main-text
@@ -128,3 +128,4 @@ user-list-column-max-width = 400px
 		align-items center
 		color secondary-text-color
 		text-shadow light-shadow
+		min-height 35px
