--- a/public/game/styles/game.styl
+++ b/public/game/styles/game.styl
@@ -12,13 +12,13 @@ light-shadow = 0 1px 4px rgba(0, 0, 0, .15)
 	padding 0 main-left-offset 0 main-right-offset
 
 	.puzzles-progress
-		margin-bottom 0.8em
+		margin-bottom 1.3em
 
 	.levels-info-num
 		color secondary-text-color
 		text-shadow light-shadow
-		font-size 1.2em
-		margin 0
+		font-size 1.5em
+		margin 0 .3em 0 0
 
 	.levels-info-name
 		color main-text
@@ -33,7 +33,7 @@ light-shadow = 0 1px 4px rgba(0, 0, 0, .15)
 		justify-content space-between
 		align-items stretch
 		flex-wrap wrap
-		margin .8em 0
+		margin .4em 0 .8em 0
 
 	.controls-selector-banned-container
 		display flex
@@ -72,6 +72,9 @@ light-shadow = 0 1px 4px rgba(0, 0, 0, .15)
 	.success-marker
 		color fresh-dollar
 		font-size 3em
+
+	.match-renderer
+		font-size 1.2em
 
 @media (orientation portrait)
 	.game-screen-container
